<resources>
    <string name="app_name">Pikr</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="change">Change</string>
    <string name="name">Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="major">Major</string>
    <string name="dartmouth_class">Dartmouth Class</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="feed">Feed</string>
    <string name="my_activity">My Activity</string>
    <string name="hello">Hello</string>
    <string name="public_feed">Public</string>
    <string name="private_feed">Private</string>
    <string name="post_description">Description \nof \nPost</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="add_friends">Add Friends</string>
    <string name="friends_subheader">Posts from friends will appear in your private feed</string>
    <string name="friends_header">Add to friends list!</string>
    <string name="my_friends">My Friends:</string>
    <string name="poster_name">Poster\'s name</string>
    <string name="current_feed">Feed type:</string>
    <string name="save">Save</string>
    <string name="publish_post">Publish post</string>
    <string name="create">Create</string>
    <string name="add_photo">Add Photo</string>
    <string name="friends"># Friends</string>
    <string name="posts"># Posts</string>
    <string name="votes"># Votes</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete">DELETE</string>
</resources>
